--- a/src/app/shared/form/form.component.html
+++ b/src/app/shared/form/form.component.html
@@ -1,1 +1,7 @@
 <router-outlet></router-outlet>
+<div class="steps">
+    <span>Step {{step}} de {{steps}}</span>
+    <input type="radio">
+    <input type="radio">
+    <input type="radio">
+</div>
