--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,10 @@ body {
   justify-content: center;
   font-family: "Inter", sans-serif;
 }
+app-root {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
