--- a/src/app/shared/form-email/form-email.component.html
+++ b/src/app/shared/form-email/form-email.component.html
@@ -1,18 +1,33 @@
 <form class="form" [formGroup]="formemail" (ngSubmit)="step2()">
-    <p>Register</p>
-    <div class="name">
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" placeholder="Name" formControlName="name" />
-        @if (viewErrorMessage('name') !== '') {
-        <span class="errorMessage">{{viewErrorMessage('name')}}</span>
-        }
-    </div>
-    <div class="email">
-        <label for="email">Email</label>
-        <input type="text" id="email" name="email" placeholder="Email" formControlName="email" />
-        @if (formemail.get('email')?.touched) {
-        <span class="errorMessage">{{viewErrorMessage('email')}}</span>
-        }
-    </div>
-    <app-submit-button [label]="'Continue'" class="app-submit-button"></app-submit-button>
+  <p>Register</p>
+  <div class="name">
+    <label for="name">Name</label>
+    <input
+      type="text"
+      id="name"
+      name="name"
+      placeholder="Name"
+      formControlName="name"
+    />
+    @if (viewErrorMessage('name') !== '') {
+    <span class="errorMessage">{{ viewErrorMessage("name") }}</span>
+    }
+  </div>
+  <div class="email">
+    <label for="email">Email</label>
+    <input
+      type="text"
+      id="email"
+      name="email"
+      placeholder="Email"
+      formControlName="email"
+    />
+    @if (formemail.get('email')?.touched) {
+    <span class="errorMessage">{{ viewErrorMessage("email") }}</span>
+    }
+  </div>
+  <app-submit-button
+    [label]="'Continue'"
+    class="app-submit-button"
+  ></app-submit-button>
 </form>
